changed text w images

--- a/server/public/views/dialog.html
+++ b/server/public/views/dialog.html
@@ -5,10 +5,8 @@
 
         <md-dialog-content>
             <div class="md-dialog-content">
-            <iframe src="https://player.vimeo.com/video/4448877"  frameborder="0" webkitallowfullscreen mozallowfullscreen
-                allowfullscreen></iframe>
+            
+                
             <p>
-                <a href="https://vimeo.com/4448877">The Wreck Family</a> from
-                <a href="https://vimeo.com/privatepress">Private Press</a> on
-                <a href="https://vimeo.com">Vimeo</a>.</p>
+                TRAILER AVAILABLE SOON</p>
 </md-dialog>
