--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-        <title>NORTH BY CURRENT, AN ADAPTION</title>
+        <title>NORTH BY CURRENT, AN ADAPTATION</title>
         <!-- Angular and Angular-Route -->
         <script src="vendors/angular.min.js" charset="utf-8"></script>
         <script src="vendors/angular-route.min.js" charset="utf-8"></script>
@@ -34,8 +34,8 @@
                         <header layout="row" layout-xs="column" layout-align="start center" flex>
                             
                             
-                                <h1>
-                                    NORTH BY CURRENT, AN ADAPTION
+                                <h1 class="md-flex">
+                                    NORTH BY CURRENT, AN ADAPTATION
                                 </h1>
                                 
 
@@ -50,85 +50,33 @@
                     <br/>
                     <br/>
                 </div>
-                    <!-- <span class="scroll-down"></span> -->
-                        
                 
-                <!-- <md-content> -->
-                    <!-- <div id="firstp" layout="column" layout-align="space-around center" flex>
-                        <div>
-                            <p>At The River traces, first person, the filmmaker's relationship with his family following his niece's unexplained death and
-                            his brother-in-law's false incarceration for her murder. Against the landscapes of addiction, trans identity and religion,
-                            Madsen Minax weaves the complexities and nuances of human connection, to create a relentless portrait of coping rural
-                            America.
-                            </p>
-                        </div>
-                        <div>
-                            <md-button class="md-primary" ng-click="mc.showDialog($event)" class="md-raised" aria-label="Open Dialog"
-                        id="more">
-                        VIEW TRAILER
-                    </md-button>
-                        </div>
-                    </div> -->
-                <!-- </md-content> -->
-                <!-- <div id="post2" class="post">
-                    
-                </div> -->
-                
-                        <div id="post3" class="post" id="firstp" layout="column" layout-align="space-around center" flex>
-                            <div>
-                                <br/>
-                                <br/>
-                                <br/>
-                                <br/>
-                                <br/>
-                                <br/>
-                                <p>North By Current, An Adaption traces, first person, the filmmaker's relationship with his family following his niece's unexplained
+                        <div id="post3" class="post" id="firstp" layout="row" layout-align="space-around center">
+                            <div flex="40">
+                            <md-content flex layout-padding>
+                                
+                                <p class="md-flex">North By Current, An Adaptation traces, first person, the filmmaker's relationship with his family following his niece's unexplained
                                     death and his brother-in-law's false incarceration for her murder. Against the landscapes of addiction, trans
                                     identity and religion, Madsen Minax weaves the complexities and nuances of human connection, to create a relentless
                                     portrait of coping rural America.
                                 </p>
-                            </div>
-                            <div>
                                 <md-button class="md-primary md-raised" ng-click="mc.showDialog($event)" aria-label="Open Dialog" id="more">
-                                    VIEW TRAILER
+                                    TRAILER AVAILABLE SOON
                                 </md-button>
+                                
+                            </md-content>
+                            </div>
+                            <div flex="60" id="imgdiv1">
+                                <img id="curtain" src="/images/curtain.png">
                             </div>
                         </div>
+                        <div id="post8" class="post">
                         
-                    <!-- <md-content>
-                    <div id="secondp" layout="row" layout-align="space-around center" flex>
-                        <p><a href="http://www.madsenminax.com" target="_blank">Madsen Minax</a> is an artist, musician and filmmaker who was born and raised in Northern Michigan. He received a BFA from the
-                        School of the Art Institute of Chicago in 2005, an MFA from Northwestern University in 2012, and has held numerous residencies
-                        and fellowships from the Core Program, the Skowhegan School of Painting and Sculpture, the Bemis Center for Contemporary
-                        Art, the Berlinale DOC Station, the Flaherty Film Seminar and others. Madsen's projects have screened and exhibited at venues
-                        including the Museum of Contemporary Art (Chicago), Anthology Film Archives (NYC), The British Film Institute (UK), the European
-                        Media Art Festival (Germany), the Ann Arbor Film Festival, Oufest, Newfest, and Frameline, earning jury awards from the Philadelphia
-                        Independent Film Festival, the Vermont International Film Festival, the New Jersey International Film Festival, Los Angeles
-                        Film Forum, Denver Underground Film Festival, Chicago's Reeling LGBT Film Festival, and the Indie Memphis Film Festival.
-                        </p>
-                    </div>
-                    </md-content> -->
-                </div>
-                <!-- <md-content> -->
-                    <!-- <div id="secondp" layout="row" layout-align="space-around center" flex>
-                        <p>
-                            <a href="http://www.madsenminax.com" target="_blank">Madsen Minax</a> is an artist, musician and filmmaker who was born and raised in Northern Michigan. He received
-                            a BFA from the School of the Art Institute of Chicago in 2005, an MFA from Northwestern University in 2012, and
-                            has held numerous residencies and fellowships from the Core Program, the Skowhegan School of Painting and Sculpture,
-                            the Bemis Center for Contemporary Art, the Berlinale DOC Station, the Flaherty Film Seminar and others. Madsen's
-                            projects have screened and exhibited at venues including the Museum of Contemporary Art (Chicago), Anthology
-                            Film Archives (NYC), The British Film Institute (UK), the European Media Art Festival (Germany), the Ann Arbor
-                            Film Festival, Oufest, Newfest, and Frameline, earning jury awards from the Philadelphia Independent Film Festival,
-                            the Vermont International Film Festival, the New Jersey International Film Festival, Los Angeles Film Forum,
-                            Denver Underground Film Festival, Chicago's Reeling LGBT Film Festival, and the Indie Memphis Film Festival.
-                        </p>
-                    </div> -->
-                <!-- </md-content> -->
-                <!-- <div id="post4" class="post">
-                    
-                </div> -->
-                
-                    <div id="post5" class="post" layout="row" layout-align="center start" flex>
+                        </div>
+
+                    <div id="post5" class="post" id="firstp" layout="row" layout-align="space-around center">
+                        <div flex="40">
+                        <md-content flex layout-padding>
                         <p>
                             <a href="http://www.madsenminax.com" target="_blank">Madsen Minax</a> is an artist, musician and filmmaker who was born and raised in Northern Michigan. He received a
                             BFA from the School of the Art Institute of Chicago in 2005, an MFA from Northwestern University in 2012, and has
@@ -140,6 +88,11 @@
                             International Film Festival, the New Jersey International Film Festival, Los Angeles Film Forum, Denver Underground
                             Film Festival, Chicago's Reeling LGBT Film Festival, and the Indie Memphis Film Festival.
                         </p>
+                        </md-content>
+                    </div>
+                    <div flex="60" id="imgdiv2">
+                        <img id="curtain" src="/images/lumberstacks2.png">
+                    </div>
                     </div>
                     <!-- <div id="button" layout="row" layout-align="space-around center" flex ng-click="showDialog($event)">
                         <a class="btn btn-large btn-gray" href="#">VIEW TRAILER</a>
@@ -155,9 +108,7 @@
                 <!-- <div id="post7" class="post">
                     
                 </div> -->
-                <div id="post8" class="post">
-                    
-                </div>
+                
                 <!-- <div id="post9" class="post">
                     
                 </div> -->
@@ -170,9 +121,7 @@
                 <div id="post12" class="post">
                     
                 </div>
-                <div id="post13" class="post">
-                    
-                </div>
+                
                 <div id="post14" class="post">
                     
                 </div>
@@ -189,12 +138,9 @@
                     
                 </div>
                 
-                <div id="post20" class="post">
+                
                     
-                </div>
-                <div id="post21" class="post">
-                    
-                </div>
+                
                 
                 <footer>
                     <div id="footer" layout="column" layout-align="center center" flex>
