--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -56,7 +56,7 @@ p{
  }
 }
 p {
-    font-size: 20px;
+    font-size: 16px;
     padding-left: 50px;
     padding-right: 50px;
     text-align: justify;
@@ -76,10 +76,10 @@ footer {
     
 }
 
-img {
+/* img {
   max-height: 200%;
-  max-height: auto;
-}
+  max-width: 200%;
+} */
 
 .logo {
     height: 100px;
@@ -181,26 +181,38 @@ md-button {
 }
 
 #post3 {
-  background-image: url("/images/curtain.png");
- font-size: 60px;
- background-attachment: scroll;
+padding-right: 5%;
+padding-left: 5%;
+padding-top: 10%;
+padding-bottom: 10%;
+}
+ 
   
+
+
+#curtain{
+  
+    width: 100%;
+    height: auto;
+    
+    
 }
 
-
-
+md-content {
+  
+  font-weight: 400;
+}
 
 #post5 {
-  background-image: url("/images/lumberstacks2.png");
-  font-size: 60px;
-  background-attachment: scroll;
-  
-  /* background-size: 100%; */
+  padding-right: 5%;
+padding-left: 5%;
+padding-top: 10%;
+padding-bottom: 10%;
 }
- #post5 p {
+ /* #post5 p {
    vertical-align: text-top;
    padding-bottom: 45%;
- }
+ } */
 #post6 {
   background-image: url("/images/frameinframe.png");
   /* background-size: 100%; */
@@ -279,22 +291,6 @@ md-button {
   font-size: 120px;
 }
 
-#post20 {
-  background-image: url("/images/trainsnow.png");
-  /* background-size: 100%; */
-  font-size: 120px;
-}
-
-#post21 {
-  background-image: url("/images/snowyroad.png");
-  /* background-size: 100%; */
-  font-size: 120px;
-}
-
-/* #post22 {
-  background-image: url("/images/woods2.png");
-  /* background-size: 100%; */
-/* }  */
 .scroll-down {
   
 	position: relative;
