changed layout response

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -51,9 +51,9 @@
                     <br/>
                 </div>
                 
-                        <div id="post3" class="post" id="firstp" layout="row" layout-align="space-around center">
-                            <div flex="40">
-                            <md-content flex layout-padding>
+                        <div id="post3" class="wtext" class="post" id="firstp" layout="row" layout-sm="column" layout-xs="column" layout-align="space-around center">
+                            <div flex> 
+                            <md-content>
                                 
                                 <p class="md-flex">North By Current, An Adaptation traces, first person, the filmmaker's relationship with his family following his niece's unexplained
                                     death and his brother-in-law's false incarceration for her murder. Against the landscapes of addiction, trans
@@ -66,7 +66,7 @@
                                 
                             </md-content>
                             </div>
-                            <div flex="60" id="imgdiv1">
+                            <div flex id="imgdiv1">
                                 <img id="curtain" src="/images/curtain.png">
                             </div>
                         </div>
@@ -74,9 +74,9 @@
                         
                         </div>
 
-                    <div id="post5" class="post" id="firstp" layout="row" layout-align="space-around center">
-                        <div flex="40">
-                        <md-content flex layout-padding>
+                    <div id="post5" class="post" id="firstp" layout="row" layout-sm="column" layout-xs="column" layout-align="space-around center">
+                        <div flex>
+                        <md-content>
                         <p>
                             <a href="http://www.madsenminax.com" target="_blank">Madsen Minax</a> is an artist, musician and filmmaker who was born and raised in Northern Michigan. He received a
                             BFA from the School of the Art Institute of Chicago in 2005, an MFA from Northwestern University in 2012, and has
@@ -90,7 +90,7 @@
                         </p>
                         </md-content>
                     </div>
-                    <div flex="60" id="imgdiv2">
+                    <div flex>
                         <img id="curtain" src="/images/lumberstacks2.png">
                     </div>
                     </div>
