--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -51,7 +51,7 @@
                     <br/>
                 </div>
                 
-                        <div id="post3" class="wtext" class="post" id="firstp" layout="row" layout-sm="column" layout-xs="column" layout-align="space-around center">
+                        <div id="post3" class="wtext" class="post" id="firstp" layout="row" layout-xs="column" layout-align="space-around center">
                             <div flex> 
                             <md-content>
                                 
@@ -66,15 +66,15 @@
                                 
                             </md-content>
                             </div>
-                            <div flex id="imgdiv1">
-                                <img id="curtain" src="/images/curtain.png">
+                            <div flex>
+                                <img class="wtext" src="/images/curtain.png">
                             </div>
                         </div>
                         <div id="post8" class="post">
                         
                         </div>
 
-                    <div id="post5" class="post" id="firstp" layout="row" layout-sm="column" layout-xs="column" layout-align="space-around center">
+                    <div id="post5" class="post" layout="row" layout-xs="column" layout-align="space-around center">
                         <div flex>
                         <md-content>
                         <p>
@@ -91,7 +91,7 @@
                         </md-content>
                     </div>
                     <div flex>
-                        <img id="curtain" src="/images/lumberstacks2.png">
+                        <img class="wtext" src="/images/lumberstacks.png">
                     </div>
                     </div>
                     <!-- <div id="button" layout="row" layout-align="space-around center" flex ng-click="showDialog($event)">
